# BigInt-C

./: .gitignore  BigInt.h  CMakeLists.txt  README.md
examples/: CMakeLists.txt  fibo.c
tests/: ANSI-color-macros.h  CMakeLists.txt  left-shift-bigint.c  right-shift-bigint.c
tests/arithmetic/: add-bigint-bigint.c  add-bigint-uint.c  divide-bigint-uint.c  sub-bigint-bigint.c
tests/bitwise-operations/: left-shift-bigint.c  right-shift-bigint.c
tests/conversion/: convert-bigint-decimal-str.c
